# shaperail

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  docker-compose.ci.yml  docker-compose.yml  install.sh  release-plz.toml
docs/example-project-shaperail.io/agentledger/: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  shaperail.config.yaml
docs/example-project-shaperail.io/agentledger/migrations/: 0001_create_organizations.sql  0002_create_users.sql
docs/example-project-shaperail.io/agentledger/resources/: organizations.yaml  users.controller.rs  users.yaml
docs/example-project-shaperail.io/agentledger/src/: main.rs
shaperail-cli/: CHANGELOG.md  Cargo.toml  README.md
shaperail-cli/src/: main.rs
shaperail-cli/src/commands/: build.rs  check.rs  diff.rs  doctor.rs  explain.rs  explain_format.rs  export.rs  generate.rs  init.rs  jobs_status.rs  llm_context.rs  migrate.rs  mod.rs  resource.rs  routes.rs  seed.rs  serve.rs  test.rs  validate.rs  workspace.rs
shaperail-cli/tests/: cli_tests.rs
shaperail-codegen/: CHANGELOG.md  Cargo.toml  README.md
shaperail-codegen/src/: config_parser.rs  diagnostics.rs  feature_check.rs  json_schema.rs  lib.rs  openapi.rs  parser.rs  parser_saphyr.rs  proto.rs  rust.rs  service_client.rs  span.rs  typescript.rs  validator.rs  workspace_parser.rs
shaperail-codegen/src/diagnostics/: inner.rs  registry.rs  types.rs
shaperail-codegen/tests/: clippy_clean.rs  diagnostic_doc_pages.rs  diagnostic_registry.rs  generated_is_rustfmt_clean.rs  saphyr_parity.rs  snapshot_tests.rs
shaperail-codegen/tests/fixtures/invalid/: enum_no_values.yaml  missing_resource.yaml  missing_version.yaml
shaperail-codegen/tests/fixtures/valid/: orders.yaml  organizations.yaml  tags.yaml  users.yaml
shaperail-codegen/tests/snapshots/: snapshot_tests__invalid_belongs_to_no_key.snap  snapshot_tests__invalid_enum_no_values.snap  snapshot_tests__invalid_input_field_missing.snap  snapshot_tests__invalid_missing_resource.snap  snapshot_tests__invalid_missing_schema.snap  snapshot_tests__invalid_missing_version.snap  snapshot_tests__invalid_no_primary_key.snap  snapshot_tests__invalid_ref_not_uuid.snap  snapshot_tests__invalid_soft_delete_no_deleted_at.snap  snapshot_tests__invalid_soft_delete_no_updated_at.snap  snapshot_tests__invalid_yaml_syntax.snap  snapshot_tests__valid_minimal.snap  snapshot_tests__valid_orders.snap  snapshot_tests__valid_organizations.snap  snapshot_tests__valid_tags.snap  snapshot_tests__valid_users.snap
shaperail-core/: CHANGELOG.md  Cargo.toml  README.md
shaperail-core/src/: channel.rs  config.rs  database.rs  endpoint.rs  error.rs  field_type.rs  lib.rs  relation.rs  resource.rs  saga.rs  schema.rs  workspace.rs
shaperail-runtime/: CHANGELOG.md  Cargo.toml  README.md
shaperail-runtime/benches/: health_response.rs  throughput.rs
shaperail-runtime/src/: lib.rs  test_support.rs
shaperail-runtime/src/auth/: api_key.rs  extractor.rs  jwt.rs  mod.rs  rate_limit.rs  rbac.rs  subject.rs  tokens.rs
shaperail-runtime/src/cache/: mod.rs  pool.rs  store.rs
shaperail-runtime/src/db/: generated.rs  manager.rs  migration.rs  mod.rs  mongo.rs  orm_query.rs  pagination.rs  pool.rs  query.rs  search.rs  store.rs
shaperail-runtime/src/events/: emitter.rs  inbound.rs  log.rs  webhook.rs
shaperail-runtime/src/graphql/: dataloader.rs  handler.rs  mod.rs  schema.rs
shaperail-runtime/src/grpc/: codec.rs  interceptor.rs  mod.rs  server.rs  service.rs
shaperail-runtime/src/handlers/: controller.rs  crud.rs  custom.rs  mod.rs  params.rs  relations.rs  response.rs  routes.rs  validate.rs
shaperail-runtime/src/jobs/: mod.rs  queue.rs  worker.rs
shaperail-runtime/src/observability/: health.rs  logging.rs  metrics.rs  telemetry.rs
shaperail-runtime/src/plugins/: mod.rs
shaperail-runtime/src/registry/: mod.rs
shaperail-runtime/src/sagas/: executor.rs  handler.rs  mod.rs
shaperail-runtime/src/storage/: backend.rs  local.rs  mod.rs  object_store_backend.rs  upload.rs
shaperail-runtime/src/ws/: mod.rs  pubsub.rs  room.rs  session.rs
shaperail-runtime/tests/: api_integration.rs  db_integration.rs  grpc_service_tests.rs  handler_tests.rs  multi_db_tests.rs
steel-cli/: Cargo.toml
steel-cli/src/: main.rs
steel-cli/src/commands/: export.rs  init.rs  migrate.rs
steel-cli/tests/: cli_tests.rs
steel-codegen/: Cargo.toml
steel-codegen/src/: config_parser.rs  lib.rs  openapi.rs  parser.rs  typescript.rs  validator.rs
steel-codegen/tests/: snapshot_tests.rs
steel-codegen/tests/fixtures/invalid/: missing_schema.yaml  (+6 more)
steel-codegen/tests/snapshots/: snapshot_tests__invalid_belongs_to_no_key.snap  snapshot_tests__invalid_enum_no_values.snap  snapshot_tests__invalid_input_field_missing.snap  snapshot_tests__invalid_missing_resource.snap  snapshot_tests__invalid_missing_schema.snap  snapshot_tests__invalid_missing_version.snap  snapshot_tests__invalid_no_primary_key.snap  snapshot_tests__invalid_ref_not_uuid.snap  snapshot_tests__invalid_soft_delete_no_updated_at.snap  snapshot_tests__invalid_yaml_syntax.snap  snapshot_tests__valid_minimal.snap  snapshot_tests__valid_orders.snap  snapshot_tests__valid_organizations.snap  snapshot_tests__valid_tags.snap  snapshot_tests__valid_users.snap
steel-core/: Cargo.toml
steel-core/src/: channel.rs  config.rs  endpoint.rs  error.rs  field_type.rs  lib.rs  relation.rs  resource.rs  schema.rs
steel-runtime/: Cargo.toml
steel-runtime/src/: lib.rs
steel-runtime/src/cache/: store.rs
steel-runtime/src/db/: filter.rs  migration.rs  mod.rs  pagination.rs  pool.rs  query.rs  sort.rs
steel-runtime/src/events/: emitter.rs  inbound.rs  log.rs  mod.rs  webhook.rs
steel-runtime/src/handlers/: crud.rs
steel-runtime/src/jobs/: worker.rs
steel-runtime/src/observability/: health.rs  logging.rs  metrics.rs  middleware.rs  mod.rs  telemetry.rs
steel-runtime/src/ws/: pubsub.rs  session.rs
steel-runtime/tests/: db_integration.rs
(+219 files in other folders)
