[workspace]
members = [
    "shaperail-core",
    "shaperail-codegen",
    "shaperail-runtime",
    "shaperail-cli",
    "examples/recipes/file_upload",
    "examples/recipes/multi_tenant_rls",
    "examples/recipes/paginated_list_with_filters",
    "examples/recipes/rate_limited_public",
]
resolver = "2"

[workspace.package]
version = "0.15.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "AI-native Rust backend framework — define your API in YAML, get a production-ready server"
homepage = "https://shaperail.io"
repository = "https://github.com/shaperail/shaperail"
readme = "README.md"
keywords = ["web", "api", "framework", "code-generation"]
categories = ["web-programming::http-server", "development-tools"]

[workspace.dependencies]
# Internal crates — pinned in one place so release-plz only needs to
# update workspace.package.version + these four lines on a release. Each
# consumer crate inherits via `<name>.workspace = true` in its
# [dependencies] section. Without this, internal version pins live in
# every consumer's Cargo.toml and release-plz's per-crate analysis can
# leave some pins stale when a release bumps the workspace via
# version_group but the consumer crate had no commits of its own.
shaperail-core = { version = "0.15.0", path = "shaperail-core" }
shaperail-codegen = { version = "0.15.0", path = "shaperail-codegen" }
shaperail-runtime = { version = "0.15.0", path = "shaperail-runtime" }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP — PRD spec: Actix-web 4
actix-web = "4"
actix-ws = "0.4"
actix-multipart = "0.7"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database — PRD spec: sqlx compile-time verified; M14: SeaORM for multi-DB
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "mysql", "sqlite", "uuid", "chrono", "json", "migrate", "macros"] }
sea-orm = { version = "1.1", default-features = false, features = ["sqlx-postgres", "sqlx-mysql", "sqlx-sqlite", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json"] }
sea-query = "0.32"

# MongoDB (M14)
mongodb = { version = "3" }

# Cache — PRD spec: deadpool-redis
deadpool-redis = "0.23"
redis = { version = "1.2", features = ["tokio-comp"] }

# Storage — PRD spec: object_store
object_store = { version = "0.13.2", features = ["aws", "gcp", "azure"] }

# Email — PRD spec: lettre
lettre = { version = "0.11", features = ["tokio1", "smtp-transport", "builder"] }

# Scheduling — PRD spec: tokio-cron-scheduler
tokio-cron-scheduler = "0.10"

# Observability — PRD spec: tracing + opentelemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
prometheus = { version = "0.14", default-features = false }

# Auth
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
bcrypt = "0.15"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Errors
thiserror = "2"
anyhow = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Code generation
tera = "1"
indexmap = "2"

# GraphQL (M15)
async-graphql = { version = "7", default-features = false, features = ["chrono", "uuid", "dynamic-schema"] }
async-graphql-actix-web = { version = "7", default-features = false }

# gRPC (M16)
tonic = { version = "0.14", default-features = false, features = ["transport", "router"] }
prost = "0.14"
prost-types = "0.14"
tonic-reflection = "0.14"
tonic-health = "0.14"
tokio-stream = { version = "0.1", features = ["net"] }

# WASM Plugins (M19)
wasmtime = "44"

# Testing
insta = { version = "1", features = ["yaml", "json"] }
assert_cmd = "2"
predicates = "3"
