[package]
name = "shaperail-cli"
description = "CLI for Shaperail — shaperail init, generate, serve, build, migrate, and more"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "shaperail"
path = "src/main.rs"

[dependencies]
shaperail-codegen = { workspace = true }
shaperail-core = { workspace = true }
shaperail-runtime = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
sqlx = { workspace = true }

[features]
default = []
# Build the CLI against shaperail-codegen's saphyr-based parser so that
# `shaperail check --json` carries source spans on diagnostics. Off by
# default; opt in with --features saphyr-spans.
saphyr-spans = ["shaperail-codegen/saphyr-spans"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = "3"
