[package]
name = "shaperail-codegen"
description = "YAML parser, validator, and code generator for Shaperail"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
shaperail-core = { version = "0.10.1", path = "../shaperail-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = "3"
