[package]
name = "shaperail-codegen"
description = "YAML parser, validator, and code generator for Shaperail"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
shaperail-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
saphyr = { version = "0.0.6", optional = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = "3"

[features]
default = []
saphyr-spans = ["dep:saphyr"]
