[package]
name = "shaperail-runtime"
description = "Actix-web runtime for Shaperail — HTTP, DB, cache, auth, jobs, events, storage"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
shaperail-core = { version = "0.2.1", path = "../shaperail-core" }
actix-web = { workspace = true }
actix-ws = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
jsonwebtoken = { workspace = true }
deadpool-redis = { workspace = true }
redis = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
futures-util = "0.3"
bytestring = "1"
object_store = { workspace = true }
image = "0.25"
http = "1"
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
prometheus = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
tokio = { workspace = true }
actix-web = { workspace = true }
actix-rt = "2"
tempfile = "3"
