[package]
name = "shaperail-runtime"
description = "Actix-web runtime for Shaperail — HTTP, DB, cache, auth, jobs, events, storage"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["graphql", "grpc", "wasm-plugins", "multi-db", "observability-otlp"]
graphql = ["dep:async-graphql", "dep:async-graphql-actix-web"]
grpc = ["dep:tonic", "dep:prost", "dep:prost-types", "dep:tonic-reflection", "dep:tonic-health", "dep:tokio-stream", "dep:http-body", "dep:http-body-util", "dep:tower"]
wasm-plugins = ["dep:wasmtime"]
multi-db = ["dep:mongodb"]
observability-otlp = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk"]

[dependencies]
shaperail-core = { version = "0.10.0", path = "../shaperail-core" }
actix-web = { workspace = true }
actix-ws = { workspace = true }
actix-multipart = { workspace = true }
sqlx = { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
jsonwebtoken = { workspace = true }
deadpool-redis = { workspace = true }
redis = { workspace = true }
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json"] }
bytestring = "1"
serde_yaml = { workspace = true }
object_store = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
http = "1"
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }

# Optional: OpenTelemetry OTLP export (feature = "observability-otlp")
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }

# Optional: GraphQL (feature = "graphql")
async-graphql = { workspace = true, optional = true }
async-graphql-actix-web = { workspace = true, optional = true }

# Optional: gRPC (feature = "grpc")
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
tonic-reflection = { workspace = true, optional = true }
tonic-health = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
http-body = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
tower = { version = "0.5", default-features = false, optional = true }

# Optional: MongoDB (feature = "multi-db")
mongodb = { workspace = true, optional = true }

# Optional: WASM plugins (feature = "wasm-plugins")
wasmtime = { workspace = true, optional = true }

[dev-dependencies]
sqlx = { workspace = true, default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
tokio = { workspace = true }
actix-web = { workspace = true }
actix-rt = "2"
criterion = { version = "0.8", features = ["async_tokio"] }
tempfile = "3"
wat = "1"

[[bench]]
name = "health_response"
harness = false

[[bench]]
name = "throughput"
harness = false
