[package]
name = "steel-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
steel-core = { path = "../steel-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
