[package]
name = "steel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
actix-web = { workspace = true }
sqlx = { workspace = true }
