[workspace]

[package]
name = "agentledger"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
build = "build.rs"

[dependencies]
shaperail-runtime = { version = "0.4.0" }
shaperail-core = { version = "0.4.0" }
shaperail-codegen = { version = "0.4.0" }
actix-web = "4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[build-dependencies]
dotenvy = "0.15"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "migrate"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
