[workspace]

[package]
name = "agentledger"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
build = "build.rs"

[dependencies]
shaperail-runtime = { path = "../../../shaperail-runtime" }
shaperail-core = { path = "../../../shaperail-core" }
shaperail-codegen = { path = "../../../shaperail-codegen" }
actix-web = "4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
argon2 = "0.5"

[build-dependencies]
dotenvy = "0.15"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "migrate"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
